--- a/Day-1/index.html
+++ b/Day-1/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>my first website</title>
+    </head>
+    <body>
+        <h1>this is an h1 heading</h1>
+        <h2>this is and h2 heading</h2>
+        <h3>this is an h3 heading</h3>
+        <h4>this is an h4 heading</h4>
+        <h5>this is an h5 heading</h5>
+        <hr>
+        <br>
+        <pre>
+        Lorem ipsum dolor sit amet consectetur, 
+        adipisicing elit. Autem cum quod aspernatur, 
 
+        natus at beatae molestiae odio officia? Sapiente 
+        sint omnis maxime ratione
+
+        quaerat eveniet nihil velit porro 
+        corrupti dignissimos.
+
+        </pre>
+        <!--these are comments-->
+
+    </body>
+</html>
